horizontal scroll apperared needs fixing

--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -3,5 +3,5 @@
     flex-direction: column;
     align-items: center;
 
-    padding-top: 28px;
+    /*padding-top: 28px;*/
 }
