--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,6 +2,8 @@
     min-width: 1184px;
     height: 52px;
 
+    margin-top: 28px;
+
     display: flex;
     justify-content: space-between;
 }
