--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,3 +1,9 @@
 .intro {
+    width: 690px;
+    height: 429px;
 
+    margin-top: 92px;
+
+    color: #FFFFFF;
+    text-align: left;
 }
