--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -1,4 +1,6 @@
 .lead__caption {
+    margin-top: 8px;
+
     font-weight: normal;
     font-size: 10px;
     line-height: 1.4;
