--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -3,7 +3,7 @@
     max-width: 1600px;
 
     margin: 0 auto;
-    align-items: center;
+    /*align-items: center;*/
 
     font-family: "Inter", sans-serif;
 
